# shelly4b_exporter

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: compile.yml
.grafana/: shelly4b.json
src/: main.rs
