[package]
name = "shelly4b_exporter"
version = "0.1.0"
authors = ["Jacob Bremmer <jacob.br***>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.8.0"
url = "2.2.0"
log = { version = "0.4" }
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
prometheus = "0.11.0"
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]